--- a/builds/development/css/style.css
+++ b/builds/development/css/style.css
@@ -1,4 +1,6 @@
 @import "http://fonts.googleapis.com/css?family=Patua+One|Inika";
+@important "compass/reset" 
+@import "compass/css3/box-shadow";
 body {
   background: #eddbba;
   font-family: "Inika", serif;
